--- a/Snys/res/layout/login_dialog.xml
+++ b/Snys/res/layout/login_dialog.xml
@@ -10,6 +10,7 @@
         android:layout_height="0dp"
         android:ems="10" 
         android:layout_weight="1"
+        android:inputType="textEmailAddress"
         android:hint="Email">
 
         <requestFocus />
