Added registration functionality. Altered main activity in preparation for a fragment-based UI. Implemented ProgressFragment to inidicate progress and started on GroupFragment for group list display (current implementation is only for testing purposes). Refactoring. Fixed logout to remove all cached data.

--- a/Snys/res/layout/fragment_group.xml
+++ b/Snys/res/layout/fragment_group.xml
@@ -1,6 +1,11 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/fragment_container"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
+
+    <ListView
+        android:id="@+id/sexy_group_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+    </ListView>
 
 </FrameLayout>
