--- a/Snys/res/layout/register_dialog.xml
+++ b/Snys/res/layout/register_dialog.xml
@@ -5,7 +5,7 @@
     android:weightSum="3" >
 
     <EditText
-        android:id="@+id/email"
+        android:id="@+id/new_email"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:ems="10" 
@@ -17,7 +17,7 @@
     </EditText>
 
     <EditText
-        android:id="@+id/password"
+        android:id="@+id/new_pass"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
@@ -28,24 +28,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1" 
-        android:weightSum="3">
+        android:layout_weight="1">
 
-        <TextView
-            android:id="@+id/reg_prompt"
-            android:layout_width="0dp"
+        <EditText
+            android:id="@+id/confirm_pass"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center"
-            android:layout_weight="2"
-            android:text="No Account?"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
-
-        <Button
-            android:id="@+id/reg_button"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:text="Register" />
+            android:ems="10"
+            android:inputType="textPassword" 
+            android:hint="confirm password"/>
         
     </LinearLayout>
 
