Significant work on UI. Groups and notes are now displayed appropriately. Flinging rows exposes buttons (currently unhandled) for modifying the relevant object. This is currently not as responsive as intended, and will likely change in a future commit.

--- a/Snys/res/layout/fragment_group.xml
+++ b/Snys/res/layout/fragment_group.xml
@@ -5,7 +5,8 @@
     <ListView
         android:id="@+id/sexy_group_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="match_parent"
+        android:background="#FFFFFF">
     </ListView>
 
 </FrameLayout>
