--- a/Snys/res/menu/main.xml
+++ b/Snys/res/menu/main.xml
@@ -6,7 +6,19 @@
     <item
         android:id="@+id/action_logout"
         android:orderInCategory="100"
-        android:title="@string/action_logout"
+        android:title="Log Out"
+        app:showAsAction="never"/>
+    
+    <item
+        android:id="@+id/action_submit"
+        android:orderInCategory="200"
+        android:title="Submit"
+        app:showAsAction="never"/>
+    
+    <item
+        android:id="@+id/action_quit"
+        android:orderInCategory="300"
+        android:title="Quit"
         app:showAsAction="never"/>
 
 </menu>
