Added alarm service and boot receiver to start sync adapter on boot (when option is enabled from menu). The alarm service currently triggers vibration and a notification. Numerous small changes to other components in the app.

--- a/Snys/res/menu/main.xml
+++ b/Snys/res/menu/main.xml
@@ -22,6 +22,12 @@
         app:showAsAction="never"/>
     
     <item
+        android:id="@+id/action_toggle_start_on_boot"
+        android:orderInCategory="350"
+        android:title="Sync on boot"
+        app:showAsAction="never"/>
+    
+    <item
         android:id="@+id/action_quit"
         android:orderInCategory="400"
         android:title="Quit"
