--- a/Snys/res/layout/fragment_rows.xml
+++ b/Snys/res/layout/fragment_rows.xml
@@ -42,6 +42,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
+                android:maxLines="1"
+                android:ellipsize="end"
                 android:text="Groupname"
                 android:textAppearance="?android:attr/textAppearanceMedium" />
         </LinearLayout>
@@ -92,6 +94,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
+                android:maxLines="1"
+                android:ellipsize="end"
                 android:text="Notification text"
                 android:textAppearance="?android:attr/textAppearanceMedium" />
         </LinearLayout>
